--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@hookform/resolvers": "^5.1.1",
     "@mui/material": "^7.2.0",
     "@mui/material-nextjs": "^7.2.0",
+    "axios": "^1.10.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -25,6 +27,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
