--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.60.0",
+    "uuid": "^11.1.0",
     "yup": "^1.6.1",
     "zustand": "^5.0.6"
   },
